--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -2,13 +2,13 @@ name: Pages
 on:
   push:
     branches:
-    - autocompile
+    - main
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/setup-python@v2
-    - uses: actions/checkout@autocompile
+    - uses: actions/checkout@main
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
     - name: Dependencies
@@ -18,7 +18,7 @@ jobs:
     - name: Build and Commit
       run: python compile
     - name: Push changes
-      uses: ad-m/github-push-action@autocompile
+      uses: ad-m/github-push-action@main
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
