--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,17 +7,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-python@v2
-    - uses: actions/checkout@master
-      with:
-        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+    - name: Setup Python
+      uses: actions/setup-python@v2
+    - name: Setup branch
+      run: |
+        git checkout gh-pages
+        git reset --hard origin/main
     - name: Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install markdown
-    - name: Build and Commit
+    - name: Build
       run: |
         python compile.py
+    - name: Commit
         git config --local user.name "github-actions[bot]"
         git add --all
         git commit --all -m "Build"
