--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         python compile.py
     - name: Commit
+      run: |
         git config --local user.name "github-actions[bot]"
         git add --all
         git commit --all -m "Build"
