--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/setup-python@v2
     - name: Setup branch
       run: |
-        git checkout gh-pages
+        git checkout origin/gh-pages
         git reset --hard origin/main
     - name: Dependencies
       run: |
