--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,8 +10,11 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v2
     - name: Setup branch
+      uses: actions/checkout@master
+      with:
+        fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+        ref: gh-pages
       run: |
-        git checkout origin/gh-pages
         git reset --hard origin/main
     - name: Dependencies
       run: |
