--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,13 +9,10 @@ jobs:
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2
-    - name: Setup branch
+    - name: Checkout branch
       uses: actions/checkout@master
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-        ref: gh-pages
-      run: |
-        git reset --hard origin/main
     - name: Dependencies
       run: |
         python -m pip install --upgrade pip
@@ -33,3 +30,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
+        force: true
