--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,7 +21,7 @@ jobs:
         python compile.py
     - name: Commit
       run: |
-        git config --local user.name "github-actions[bot]"
+        git config --global
         git add --all
         git commit --all -m "Build"
     - name: Push changes
