Try setting creds manually

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,6 +1,8 @@
 name: Pages
 on:
-  workflow_dispatch:  # manually
+  push:
+    branches:
+    - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,6 +23,8 @@ jobs:
         python compile.py
     - name: Commit
       run: |
+        git config --global user.email "todd.e.parsons@googlemail.com"
+        git config --global user.name "Todd Parsons"
         git add --all
         git commit --all -m "Build"
     - name: Push changes
