--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,11 +16,10 @@ jobs:
     - name: Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install markdown
-        pip install markmoji
+        pip install mkdocs mkdocs-torillic
     - name: Build
       run: |
-        python compile.py
+        mkdocs build
     - name: Commit
       run: |
         git config --global user.email "todd.e.parsons@googlemail.com"
