--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mkdocs git+https://github.com/TEParsons/mkdocs-torillic@build mkdocs-awesome-pages-plugin
+        pip install mkdocs git+https://github.com/TEParsons/mkdocs-torillic@build mkdocs-awesome-pages-plugin pandas
     - name: Build
       run: |
         mkdocs build
