--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,5 +1,7 @@
 site_name: Iuncterra
-theme: torillic
+theme: 
+  name: torillic
+  background_image: bg.jpg
 docs_dir: source
 site_dir: docs
 site_url: https://TEParsons.github.io/Iuncterra
