--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -2,6 +2,7 @@ site_name: Iuncterra
 theme: 
   name: torillic
   background_image: bg.jpg
+  favicon: favicon.png
 docs_dir: source
 site_dir: docs
 site_url: https://TEParsons.github.io/Iuncterra
